<resources>
    <string name="app_name">Movers and Packers</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_button">New User</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="name_registration">Name</string>
    <string name="address_registration">Address</string>
    <string name="phone_no_registration">Phone Number</string>
    <string name="email_id">Email Id</string>
    <string name="user_radio_registration">User</string>
    <string name="transporter_radio_registration">Transporter</string>
    <string name="answer_edit_registration">Answer</string>
    <string name="password_registration">Password</string>
    <string name="select_package_registration">Select Package</string>

    <string-array name="Area">
        <item>Manekbaug</item>
        <item>satellite</item>
        <item>paldi</item>
        <item>Maninagar</item>
    </string-array>

    <string-array name="Security_Question">
        <item>What is your nickname?</item>
        <item>Which is your favorite book?</item>
        <item>Who is your favorite crickter?</item>
        <item>Which is your favorite sport?</item>
    </string-array>
    <string name="select_package_text">Select Package</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="reset_text">Reset</string>

    <string-array name="Package">
        <item>Abc</item>
        <item>Def</item>
        <item>zxa</item>
        <item>uei</item>
        <item>uri</item>
    </string-array>
    <string name="title_activity_customer">CustomerActivity</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_customer_main">Customer_main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_visitor_main">Visitor_main</string>
    <string name="title_activity_item">item</string>
    <string name="title_activity_transporter_main">Transporter_main</string>
    <string name="title_activity_settings">Settings</string>


</resources>
